# Rusted

./: LICENSE  README.md
system-info/: Cargo.toml
system-info/Src/: main.rs
system-info/ui/: app-windows.slint
