[package]
name = "system-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.9.1"
sysinfo ="0.29.0" 
nvml-wrapper = "0.10.0"
wgpu = "23.0.1"
pollster = "0.4.0"
log = "0.4.22"
env_logger = "0.11.6"
tokio = { version = "1.34", features = ["full"] }
tokio-macros = "2.4.0"


[build-dependencies]
slint-build = "1.9.1"
